[package]
name = "libgatekeeper-sys"
version = "0.5.0"
authors = [
  "Mary Strodl <ipadlover8322@gmail.com>",
  "Nick Mosher <nicholastmosher@gmail.com>"
]
edition = "2018"
license = "MIT"
description = "Rust Bindings for libgatekeeper"
repository = "https://github.com/mstrodl/libgatekeeper-sys"

[dependencies]
openssl = "0.10.41"
rand = "0.8.5"
scopeguard = "1.1.0"

[dependencies.apdu-core]
version = "0.3.0"
features = ["longer_payloads"]
